--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -10,7 +10,9 @@ on:
   # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
-# The sequence of runs in this workflow:
+permissions:
+  contents: write
+
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -34,13 +36,16 @@ jobs:
       # Show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
 
-      # Push the changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
+      # Push the changes with GitHub CLI (more robust)
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add dist/*
+          git commit -m "Updated contribution graph"
+          git push origin master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
